objects/Opportunity/fields/Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone__c</fullName>
    <label>Alternate Phone</label>
    <type>Phone</type>
</CustomField>