objects/Opportunity/fields/Any_Other_if_required_by_broker__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_if_required_by_broker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Other (if required by broker)</label>
    <type>Checkbox</type>
</CustomField>