objects/Opportunity/fields/Any_Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Information__c</fullName>
    <label>Any Other Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>