objects/Opportunity/fields/Bill_to_Adddress__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Adddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Adddress</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match.</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Account_Adddress__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Adddress__c</referenceTo>
    <relationshipLabel>Bill to Address Opp</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>