objects/Opportunity/fields/Billing_Address_with_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_with_Zip_Code__c</fullName>
    <label>Billing Address with Zip Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Billing Address</fullName>
            </value>
            <value>
                <fullName>From Contact Role</fullName>
            </value>
            <value>
                <fullName>NEW</fullName>
                <isActive>false</isActive>
                <label>NEW</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>