objects/Opportunity/fields/Box_Opportunity_Product_Link__c.field-meta.xml
<CustomField>
    <fullName>Box_Opportunity_Product_Link__c</fullName>
    <label>Box Opportunity Link</label>
    <type>Url</type>
</CustomField>