objects/Opportunity/fields/City_BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>City_BillingAddress__c</fullName>
    <formula>Contact__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>