objects/Opportunity/fields/City_ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>City_ShippingAddress__c</fullName>
    <formula>Ship_to_Contact__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>