objects/Opportunity/fields/Comment_for_Reason_for_loss__c.field-meta.xml
<CustomField>
    <fullName>Comment_for_Reason_for_loss__c</fullName>
    <label>Comment for Reason for loss</label>
    <type>TextArea</type>
</CustomField>