objects/Opportunity/fields/Comment_for_Reason_for_objection__c.field-meta.xml
<CustomField>
    <fullName>Comment_for_Reason_for_objection__c</fullName>
    <label>Comment for Reason for objection</label>
    <type>TextArea</type>
</CustomField>