objects/Opportunity/fields/Comments_For_Customer_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Comments_For_Customer_Remarks__c</fullName>
    <label>Comments For Customer(Remarks)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>