objects/Opportunity/fields/Copy_of_EIN_IRS_Copy_Importing_Firm__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_EIN_IRS_Copy_Importing_Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy of EIN (IRS Copy) Importing Firm</label>
    <type>Checkbox</type>
</CustomField>