objects/Opportunity/fields/Country_BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>Country_BillingAddress__c</fullName>
    <formula>Contact__r.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>