objects/Opportunity/fields/Country_ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>Country_ShippingAddress__c</fullName>
    <formula>Ship_to_Contact__r.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>