objects/Opportunity/fields/Credit_Days__c.field-meta.xml
<CustomField>
    <fullName>Credit_Days__c</fullName>
    <label>Credit Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>