objects/Opportunity/fields/Delivery_finalization_stage__c.field-meta.xml
<CustomField>
    <fullName>Delivery_finalization_stage__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery with Liftgate</fullName>
            </value>
            <value>
                <fullName>Delivery without Liftgate</fullName>
            </value>
            <value>
                <fullName>Fitment</fullName>
            </value>
            <value>
                <fullName>Self - Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>