objects/Opportunity/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Looking_for__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store Pick up</fullName>
            </value>
            <value>
                <fullName>Door Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>