objects/Opportunity/fields/Designation_ReceivingContact__c.field-meta.xml
<CustomField>
    <fullName>Designation_ReceivingContact__c</fullName>
    <formula>Receiving_Contact__r.Designation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designation</label>
    <type>Text</type>
</CustomField>