objects/Opportunity/fields/Email_ReceivingContact__c.field-meta.xml
<CustomField>
    <fullName>Email_ReceivingContact__c</fullName>
    <formula>Receiving_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email ID</label>
    <type>Text</type>
</CustomField>