objects/Opportunity/fields/Final_Destination_Formula__c.field-meta.xml
<CustomField>
    <fullName>Final_Destination_Formula__c</fullName>
    <formula>Ship_to_Contact__r.MailingCity &amp;&quot;, &quot;&amp; Ship_to_Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Destination</label>
    <type>Text</type>
</CustomField>