objects/Opportunity/fields/Freight_charges__c.field-meta.xml
<CustomField>
    <fullName>Freight_charges__c</fullName>
    <label>Freight charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>