objects/Opportunity/fields/Has_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Has_Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Line Item</label>
    <type>Checkbox</type>
</CustomField>