objects/Opportunity/fields/Lift_Gate_Charges__c.field-meta.xml
<CustomField>
    <fullName>Lift_Gate_Charges__c</fullName>
    <label>Lift Gate Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>