objects/Opportunity/fields/Looking_for__c.field-meta.xml
<CustomField>
    <fullName>Looking_for__c</fullName>
    <label>Looking For</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tire</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Tire + Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>