objects/Opportunity/fields/No_Objection_Quote__c.field-meta.xml
<CustomField>
    <fullName>No_Objection_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Objection Quote</label>
    <type>Checkbox</type>
</CustomField>