objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maestro</fullName>
            </value>
            <value>
                <fullName>Dropship</fullName>
            </value>
            <value>
                <fullName>Factory to Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>