objects/Opportunity/fields/Pa__c.field-meta.xml
<CustomField>
    <fullName>Pa__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Due on Receipt</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Part Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>