objects/Opportunity/fields/Phone_ReceivingContact__c.field-meta.xml
<CustomField>
    <fullName>Phone_ReceivingContact__c</fullName>
    <formula>Receiving_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>