objects/Opportunity/fields/Power_of_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Power of Attorney</label>
    <type>Checkbox</type>
</CustomField>