objects/Opportunity/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Primary Contact)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>