objects/Opportunity/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (PrimaryContact)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>