objects/Opportunity/fields/Reason_for_loss__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_loss__c</fullName>
    <label>Reason for loss</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brand_Preference/Origin</fullName>
                <label>Brand Preference/Origin</label>
            </value>
            <value>
                <fullName>Customer Issue</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>New Size</fullName>
            </value>
            <value>
                <fullName>Price/ Payment_Terms</fullName>
                <label>Price/ Payment Terms</label>
            </value>
            <value>
                <fullName>Stock_Unavailable/New size</fullName>
                <label>Stock Unavailable</label>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>