objects/Opportunity/fields/Reason_for_Objection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Objection__c</fullName>
    <label>Reason for Objection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Related to Value</fullName>
            </value>
            <value>
                <fullName>Credit Terms</fullName>
            </value>
            <value>
                <fullName>Delivery Terms</fullName>
            </value>
            <value>
                <fullName>Warranty Terms</fullName>
            </value>
            <value>
                <fullName>Service Terms</fullName>
            </value>
            <value>
                <fullName>Other Objections</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>