objects/Opportunity/fields/Receiving_Contact__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiving Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match.</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Receiving Contact)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>