objects/Opportunity/fields/Receiving_Person_Details__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Person_Details__c</fullName>
    <label>Receiving Person Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From Contact</fullName>
            </value>
            <value>
                <fullName>NEW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>