objects/Opportunity/fields/Sales_ManagerNew__c.field-meta.xml
<CustomField>
    <fullName>Sales_ManagerNew__c</fullName>
    <label>Sales Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SM1</fullName>
            </value>
            <value>
                <fullName>SM2</fullName>
            </value>
            <value>
                <fullName>SM3</fullName>
            </value>
            <value>
                <fullName>SM4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>