objects/Opportunity/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <displayFormat>{000}</displayFormat>
    <label>Serial Number</label>
    <type>AutoNumber</type>
</CustomField>