objects/Opportunity/fields/Sevice_Type__c.field-meta.xml
<CustomField>
    <fullName>Sevice_Type__c</fullName>
    <label>Sevice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only Tire</fullName>
            </value>
            <value>
                <fullName>Tire+Service</fullName>
            </value>
            <value>
                <fullName>Only Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>