objects/Opportunity/fields/Ship_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_From_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship From Address</label>
    <referenceTo>AcctSeedERP__Warehouse__c</referenceTo>
    <relationshipLabel>Opportunities (Ship From Address)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>