objects/Opportunity/fields/Ship_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account_Adddress__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account_Adddress__c</referenceTo>
    <relationshipLabel>Ship to Address Opp</relationshipLabel>
    <relationshipName>ShiptoAddressOpp</relationshipName>
    <type>Lookup</type>
</CustomField>