objects/Opportunity/fields/Ship_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Ship to Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>