objects/Opportunity/fields/Shipping_Address_with_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_with_Zip_Code__c</fullName>
    <label>Shipping Address with Zip Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same as above</fullName>
            </value>
            <value>
                <fullName>Account Shipping Address</fullName>
            </value>
            <value>
                <fullName>From Contact Role</fullName>
            </value>
            <value>
                <fullName>NEW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>