objects/Opportunity/fields/Special_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Special_Instruction__c</fullName>
    <label>Opportunity Instruction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>