objects/Opportunity/fields/Special_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Special_Remarks__c</fullName>
    <formula>Account.Special_Remarks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Instruction</label>
    <type>Text</type>
</CustomField>