objects/Opportunity/fields/State_BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>State_BillingAddress__c</fullName>
    <formula>Contact__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>