objects/Opportunity/fields/State_ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>State_ShippingAddress__c</fullName>
    <formula>Ship_to_Contact__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>