objects/Opportunity/fields/Street_Address_BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_BillingAddress__c</fullName>
    <formula>Contact__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street Address</label>
    <type>Text</type>
</CustomField>