objects/Opportunity/fields/Street_Address_ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_ShippingAddress__c</fullName>
    <formula>Ship_to_Contact__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street Address</label>
    <type>Text</type>
</CustomField>