objects/Opportunity/fields/Total_Sale_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Sale_Tax_Amount__c</fullName>
    <label>Total Sale Tax Amount</label>
    <summarizedField>OpportunityLineItem.AcctSeed__Tax_Amount__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>