objects/Opportunity/fields/Total_With_All_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_With_All_Charges__c</fullName>
    <formula>Amount  +  Freight_charges__c +  Lift_Gate_Charges__c +  Other_Charges__c  +  Total_Sale_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total With All Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>