objects/Opportunity/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <inlineHelpText>Fill the currency</inlineHelpText>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>