objects/Opportunity/fields/W9_Form__c.field-meta.xml
<CustomField>
    <fullName>W9_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W9 Form</label>
    <type>Checkbox</type>
</CustomField>