objects/Opportunity/fields/Warehouse_Location__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Location</label>
    <referenceTo>AcctSeedERP__Warehouse__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>