objects/Opportunity/fields/Won_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Won_Delivery_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Won - Delivery Status</label>
    <type>Checkbox</type>
</CustomField>