objects/Opportunity/fields/ZIP_Code_BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Code_BillingAddress__c</fullName>
    <formula>Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZIP Code</label>
    <type>Text</type>
</CustomField>