objects/Opportunity/fields/ZIP_Code_ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Code_ShippingAddress__c</fullName>
    <formula>Ship_to_Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZIP Code</label>
    <type>Text</type>
</CustomField>