objects/Opportunity/recordTypes/B2B_Container.recordType-meta.xml
<RecordType>
    <fullName>B2B_Container</fullName>
    <active>true</active>
    <businessProcess>opportunity read</businessProcess>
    <label>B2B Container</label>
</RecordType>