objects/Opportunity/recordTypes/opportunity.recordType-meta.xml
<RecordType>
    <fullName>opportunity</fullName>
    <active>true</active>
    <businessProcess>opportunity read</businessProcess>
    <label>B2B Opportunity</label>
</RecordType>