objects/Opportunity/recordTypes/Walk_In_Process.recordType-meta.xml
<RecordType>
    <fullName>Walk_In_Process</fullName>
    <active>true</active>
    <businessProcess>Walk In Process</businessProcess>
    <label>Walk In Process</label>
</RecordType>