objects/Opportunity/validationRules/lost_opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>lost_opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &quot;opportunity&quot;,AND(IsClosed,NOT(IsWon),ISPICKVAL(Reason_for_loss__c,&quot;&quot;)))</errorConditionFormula>
    <errorMessage>Please select the reason for loss.</errorMessage>
</ValidationRule>