objects/Opportunity/validationRules/mandatory_at_investigati_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>mandatory_at_investigati_stage</fullName>
    <active>true</active>
    <description>Filling Billing Address is mandatory at investigationg stage of opportunity</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &quot;opportunity&quot;,AND(
OR(
ISPICKVAL(StageName, &quot;Proposal / Customer Evaluation&quot;),
ISPICKVAL(StageName, &quot;Negotiation&quot;),
ISPICKVAL(StageName,&apos;Quotation Closed&apos;),
ISPICKVAL(StageName, &quot;Closed Won&quot;),
ISPICKVAL(StageName, &quot;Closed Lost&quot;)
),
OR(ISBLANK( Contact__c ))
))</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Please enter Bill To Contact under Billing Address</errorMessage>
</ValidationRule>