objects/Opportunity/validationRules/onCreditVRdays_required.validationRule-meta.xml
<ValidationRule>
    <fullName>onCreditVRdays_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &quot;opportunity&quot;,AND(ISPICKVAL(  Pa__c  , &quot;Credit&quot;), ISBLANK(   Credit_Days__c ) ))</errorConditionFormula>
    <errorDisplayField>Credit_Days__c</errorDisplayField>
    <errorMessage>Please enter Credit Days</errorMessage>
</ValidationRule>