objects/Opportunity/validationRules/reseller_certificate_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>reseller_certificate_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &quot;opportunity&quot;,AND(Account.RecordType.Name = &apos;Reseller&apos;,
NOT( Account.Reseller_Certificate__c),
(ISPICKVAL(StageName, &apos;Investigating&apos;) || ISPICKVAL(StageName,&apos;Proposal / Customer Evaluation&apos;) || ISPICKVAL(StageName,&apos;Negotiation&apos;) || ISPICKVAL(StageName,&apos;Quotation Closed&apos;) ||ISPICKVAL(StageName,&apos;Closed Won&apos;) || ISPICKVAL(StageName,&apos;Closed Lost&apos;))))</errorConditionFormula>
    <errorMessage>Please upload RESELLER CERTIFICATE on Account.</errorMessage>
</ValidationRule>